Fixed the alignment of search button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2275,6 +2275,7 @@ data{
   .search-btn {
     color: var(--white);
     font-size: 2.6rem;
+    margin-top: 0px;
   }
 
   .search-btn ion-icon {
